# rigorously

./: .gitignore  .mcp.json  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  CONVENTIONS.md  INSTALL.md  LICENSE  POWER.md  README.md  pyproject.toml
.claude-plugin/: plugin.json
.cursor-plugin/: plugin.json
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  false_positive.md  new_check.md  platform_report.md
hooks/: hooks.json
rigorous/: __init__.py  cli.py  db.py  mcp_server.py  report.py
rigorous/core/: __init__.py  citations.py  consistency.py  evidence.py  overclaim.py  parameters.py  reproducibility.py  review.py  statistics.py
rigorous/integrations/: __init__.py  precommit.py
rigorously/: cli.py  mcp_server.py
rigorously/core/: paper_builder.py  reproducibility.py  time_units.py  verify_numbers.py
rigorously/integrations/: precommit.py
rigorously/plan/: __init__.py  cli.py  registry.py  verifier.py
site/: index.html
skills/adversarial-review/: SKILL.md
skills/citation-verify/: SKILL.md
skills/claim-evidence-map/: SKILL.md
skills/integrity-check/: SKILL.md
skills/overclaim-detect/: SKILL.md
skills/parameter-audit/: SKILL.md
skills/reproducibility-check/: SKILL.md
skills/statistical-rigor/: SKILL.md
tests/: test_citations.py  test_overclaim.py
