[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rigorously"
version = "0.1.0"
description = "Automated research quality assurance — catches fabricated citations, overclaimed results, irreproducible numbers, and statistical misinterpretations."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Mansib Miraj"},
]
keywords = ["research", "integrity", "quality-assurance", "reproducibility", "citations"]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Text Processing :: Markup :: LaTeX",
]

dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "httpx>=0.25.0",
]

[project.optional-dependencies]
mcp = ["mcp>=1.0.0"]
dev = ["pytest>=7.0", "pytest-asyncio>=0.21"]
all = ["rigorously[mcp,dev]"]

[project.urls]
Homepage = "https://rigorous.ly"
Repository = "https://github.com/Rigorous-ly/rigorously"
Documentation = "https://rigorous.ly"
"Bug Tracker" = "https://github.com/Rigorous-ly/rigorously/issues"

[project.scripts]
rigorously = "rigorous.cli:app"

[tool.setuptools.packages.find]
where = ["."]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
